# zcompiler

./: CMakeLists.txt  README.md  mytest.py
output/: array.ir  assign.sy  const.ir  exp.sy  fib.sy  func.ir  getarray.ir  hex_oct.ir  ifelse.ir  nested.ir  runtime.sy  scope.ir  shortcut.ir  trivial.ir  unary.ir  var.ir  while.ir  while.sy
src/: ast.cpp  ast.hpp  lexer.l  main.cpp  parser.bak2  parser.y  sym.hpp
src/integrate/: eeyore2tigger.cpp  eeyore_ast.cpp  eeyore_lexer.l  eeyore_parser.y  main.cpp  mytest.py  sysy_ast.cpp  sysy_ast.hpp  sysy_lexer.l  sysy_parser.y  sysy_sym.hpp  tigger2riscv.cpp  tigger_ast.hpp  tigger_lexer.l  tigger_parser.y
src/part01/: ast.hpp  lexer.l  main.cpp  mytest.py  sym.cpp  sysy_ast.cpp  sysy_ast.hpp  sysy_parser.y  sysy_sym.cpp
src/part02/: eeyore_ast.hpp  eeyore_lexer.l  eeyore_parser.y  main.cpp  mytest.py
src/part03/: main.cpp  mytest.py  tigger_ast.cpp  tigger_ast.hpp  tigger_lexer.l  tigger_parser.y
testcases/: array.txt  assign.txt  const.sy  decl.txt  exp.txt  fib.txt  funCall.txt  func.txt  getarray.sy  hex_oct.sy  ifelse.sy  ifelse.txt  runtime.txt  scope.sy  shortcut.sy  starttime.sy  trivial.sy  trivial.txt  unary.sy  var.sy  while.sy  while.txt
